# fs2open.github.com

./: .clang-format  .clang-tidy  .gitattributes  .gitmodules  CMakeLists.txt  cmake.sh
code/: CMakeLists.txt  source_groups.cmake  voice_rec.cmake
code/actions/: Action.cpp  Action.h  Program.cpp  Program.h  ProgramManager.cpp  ProgramManager.h  common.h
code/ai/: ai.cpp  ai.h  ai_flags.h  ai_profiles.cpp  ai_profiles.h  aibig.cpp  aicode.cpp  aigoals.cpp  aigoals.h  aiturret.cpp
code/anim/: animplay.cpp  animplay.h  packunpack.cpp  packunpack.h
code/asteroid/: CMakeLists.txt  SCPAsteroidInfo.h  SCPAsteroidTable.h  SCPAsteroidTableDescriptor.h  asteroid.cpp  asteroid.h
code/autopilot/: autopilot.cpp  autopilot.h
code/bmpman/: CMakeLists.txt  bm_internal.h  bmpman.cpp  bmpman.h
code/camera/: camera.cpp  camera.h
code/cfile/: CMakeLists.txt  cfile.cpp  cfile.h  cfilearchive.cpp  cfilelist.cpp  cfilesystem.cpp  cfilesystem.h
code/cfileextractor/: cfileextractor.cpp
code/cmdline/: CMakeLists.txt  cmdline.cpp  cmdline.h
code/cmeasure/: cmeasure.cpp
code/code_tests/: CMakeLists.txt  cfile.cpp  codetests.cpp  stub.cpp
code/color/: CMakeLists.txt
code/config/: CMakeLists.txt
code/controlconfig/: controlsconfig.cpp  controlsconfig.h  controlsconfigcommon.cpp
code/core/: CMakeLists.txt  FSOutwndOutputDevice.cpp  FSOutwndOutputDevice.h  core.h  error.cpp  error.h  format.cpp  format.h  path.cpp  path.h  platform.h
code/core_interface/: CMakeLists.txt  FSAssert.h  FSColorTypes.h  FSIntegerTypes.h  FSMathOps.h  FSMathTypes.h  FSOutputDeviceBase.h  FSStdTypes.h  NOX.h  SCPApplication.h  SCPBitOps.h  SCPBuiltinLanguages.h  SCPCFilePathType.h  SCPCallPermit.h  SCPCmdOptions.h  SCPCompiler.h  SCPEndian.h  SCPFlags.h  SCPFlagset.h  SCPInternalAccessor.h  SCPLimits.h  SCPMembuf.h  SCPModTable.h  SCPObjectLookup.h  SCPProfiling.h  SCPStringUtils.h  SCPStrongInteger.h  SCPTUtils.h  osx-SCPGetPrefsPath.h  win-SCPGetPrefsPath.h
code/cutscene/: Decoder.cpp  Decoder.h  VideoPresenter.cpp  VideoPresenter.h  cutscenes.cpp  cutscenes.h  movie.cpp  player.cpp  player.h
code/ddsutils/: ddsutils.cpp  ddsutils.h
code/debris/: debris.cpp  debris.h
code/debugconsole/: console.cpp  console.h  consolecmds.cpp  consoleparse.cpp  consoleparse.h
code/decals/: decals.cpp  decals.h
code/def_files/: CMakeLists.txt  def_files-win32.cpp  def_files.h
code/events/: events.cpp  events.h  hud_events.h
code/exceptionhandler/: exceptionhandler.cpp
code/external_display/: displaylibrary.h  external_display.cpp  external_display.h  external_display_internal.h  hid.cpp  hid.h  readerwriterqueue.h
code/external_dll/: externalcode.h
code/filesystem/: CMakeLists.txt
code/fireball/: fireballs.cpp  fireballs.h  warpineffect.cpp
code/font/: CMakeLists.txt
code/fs2netd/: fs2netd_client.cpp  protocol.h  tcp_client.cpp  tcp_client.h  tcp_socket.cpp  tcp_socket.h
code/gamehelp/: contexthelp.cpp
code/gamesequence/: gamesequence.cpp
code/gamesnd/: eventmusic.cpp  eventmusic.h  gamesnd.cpp  gamesnd.h
code/globalincs/: alphacolors.cpp  alphacolors.h  flagset.h  fsmemory.h  globals.h  mspdb_callstack.cpp  pstypes.h  safe_strings.cpp  safe_strings.h  systemvars.cpp  systemvars.h  version.cpp  version.h  vmallocator.h  windebug.cpp
code/graphics/: 2d.cpp  2d.h  CMakeLists.txt  bezier.cpp  bezier.h  decal_draw_list.h  font.h  generic.cpp  generic.h  grbatch.cpp  grbatch.h  grinternal.h  grstub.cpp  light.cpp  light.h  line_draw_list.h  material.cpp  matrix.cpp  render.cpp  render.h  shadows.cpp  shadows.h  tmapper.h  uniforms.cpp
code/headtracking/: freetrack.cpp  freetrack.h  headtracking.cpp  headtracking.h  headtracking_internal.h  trackir.cpp  trackir.h  trackirpublic.cpp  trackirpublic.h
code/hud/: hud.cpp  hud.h  hudartillery.cpp  hudartillery.h  hudbrackets.cpp  hudconfig.cpp  hudescort.cpp  hudets.cpp  hudlock.cpp  hudlock.h  hudmessage.cpp  hudmessage.h  hudparse.cpp  hudparse.h  hudreticle.cpp  hudreticle.h  hudscripting.cpp  hudscripting.h  hudshield.cpp  hudshield.h  hudsquadmsg.cpp  hudsquadmsg.h  hudtarget.cpp  hudtarget.h  hudtargetbox.cpp  hudwingmanstatus.cpp  hudwingmanstatus.h
code/iff_defs/: iff_defs.cpp  iff_defs.h
code/inetfile/: cftp.cpp  cftp.h  chttpget.cpp  chttpget.h  inetgetfile.cpp
code/io/: cursor.cpp  cursor.h  joy-sdl.cpp  joy.h  joy_ff-sdl.cpp  joy_ff.h  key.cpp  key.h  keycontrol.cpp  mouse.cpp  mouse.h  timer.cpp  timer.h
code/jpgutils/: jpgutils.cpp  jpgutils.h
code/jumpnode/: jumpnode.cpp  jumpnode.h
code/lab/: lab.cpp  wmcgui.cpp  wmcgui.h
code/lighting/: lighting.cpp  lighting.h
code/localization/: CMakeLists.txt  fhash.cpp  localize.cpp  localize.h
code/log/: CMakeLists.txt
code/math/: CMakeLists.txt  RandomRange.h  fix.cpp  fix.h  floating.cpp  fvi.cpp  spline.cpp  vecmat.cpp
code/memory/: CMakeLists.txt
code/menuui/: barracks.cpp  credits.cpp  mainhallmenu.cpp  mainhallmenu.h  mainhalltemp.cpp  optionsmenu.cpp  optionsmenumulti.cpp  playermenu.cpp  playermenu.h  readyroom.cpp  snazzyui.cpp  snazzyui.h  techmenu.cpp  trainingmenu.cpp
code/mission/: mission_flags.h  missionbriefcommon.cpp  missionbriefcommon.h  missioncampaign.cpp  missioncampaign.h  missiongoals.cpp  missiongoals.h  missiongrid.cpp  missiongrid.h  missionhotkey.cpp  missionload.cpp  missionload.h  missionlog.cpp  missionlog.h  missionmessage.cpp  missionmessage.h  missionparse.cpp  missionparse.h  missiontraining.cpp
code/missionui/: chatbox.cpp  fictionviewer.cpp  fictionviewer.h  missionbrief.cpp  missioncmdbrief.cpp  missioncmdbrief.h  missiondebrief.cpp  missionloopbrief.cpp  missionpause.cpp  missionscreencommon.cpp  missionshipchoice.cpp  missionweaponchoice.cpp  redalert.cpp  redalert.h
code/mod_table/: CMakeLists.txt  mod_table.cpp  mod_table.h
code/model/: model.h  model_flags.h  modelanim.cpp  modelanim.h  modelcollide.cpp  (+5 more)
lib/: CMakeLists.txt  SimpleSignal.cmake  dbgtools.cmake  freetype.cmake  hidapi.cmake  leksysINI.cmake  peglib.cmake  sqlbuilder.cmake  sqlite.cmake  sqlite3.cmake  sqlite_orm.cmake
modules/: CMakeLists.txt
(+837 files in other folders)
