add_subdirectory(utils)
add_subdirectory(globalincs)
add_subdirectory(windows_stub)
add_subdirectory(cfile)
add_subdirectory(math)
add_subdirectory(core)
add_subdirectory(osapi)
add_subdirectory(cmdline)
add_subdirectory(sound)
add_subdirectory(ffmpeg_support)
add_subdirectory(io)
add_subdirectory(parse)
add_subdirectory(ai)
add_subdirectory(anim)
add_subdirectory(asteroid)
add_subdirectory(autopilot)
add_subdirectory(camera)
add_subdirectory(controlconfig)
add_subdirectory(cutscene)
add_subdirectory(debris)
add_subdirectory(debugconsole)
add_subdirectory(decals)
add_subdirectory(events)
add_subdirectory(exceptionhandler)
add_subdirectory(fireball)
add_subdirectory(fs2netd)
add_subdirectory(gamehelp)
add_subdirectory(gamesequence)
add_subdirectory(gamesnd)
add_subdirectory(graphics)
add_subdirectory(headtracking)
add_subdirectory(hud)
add_subdirectory(iff_defs)
add_subdirectory(inetfile)
add_subdirectory(jumpnode)
add_subdirectory(lab)