add_subdirectory(ai)
add_subdirectory(anim)
add_subdirectory(asteroid)
add_subdirectory(autopilot)
add_subdirectory(bmpman)
add_subdirectory(camera)
add_subdirectory(cfile)
add_subdirectory(cfilearchiver)
add_subdirectory(cfileextractor)
add_subdirectory(cmdline)
add_subdirectory(cmeasure)
add_subdirectory(controlconfig)
add_subdirectory(core)
add_subdirectory(cutscene)
add_subdirectory(ddsutils)
add_subdirectory(debris)
add_subdirectory(debugconsole)
add_subdirectory(decals)
add_subdirectory(events)
add_subdirectory(exceptionhandler)
add_subdirectory(external_display)
add_subdirectory(external_dll)
add_subdirectory(ffmpeg_support)
add_subdirectory(fireball)
add_subdirectory(fs2netd)
add_subdirectory(gamehelp)
add_subdirectory(gamesequence)
add_subdirectory(gamesnd)
add_subdirectory(globalincs)
add_subdirectory(graphics)
add_subdirectory(headtracking)
add_subdirectory(hud)
add_subdirectory(iff_defs)
add_subdirectory(inetfile)
add_subdirectory(io)
add_subdirectory(jpgutils)
add_subdirectory(jumpnode)
add_subdirectory(lab)
add_subdirectory(libs)
add_subdirectory(lighting)
add_subdirectory(localization)
add_subdirectory(math)
add_subdirectory(menuui)
add_subdirectory(mission)
add_subdirectory(missionui)
add_subdirectory(mod_table)
add_subdirectory(model)
add_subdirectory(nebula)
add_subdirectory(network)
add_subdirectory(object)
add_subdirectory(observer)
add_subdirectory(osapi)
add_subdirectory(parse)
add_subdirectory(particle)
add_subdirectory(pcxutils)
add_subdirectory(physics)
add_subdirectory(pilotfile)
add_subdirectory(playerman)
add_subdirectory(pngutils)
add_subdirectory(popup)
add_subdirectory(radar)
add_subdirectory(render)
add_subdirectory(scripting)
add_subdirectory(ship)
add_subdirectory(sound)
add_subdirectory(species_defs)
add_subdirectory(starfield)
add_subdirectory(stats)
add_subdirectory(tgautils)
add_subdirectory(tracing)
add_subdirectory(ui)
add_subdirectory(utils)
add_subdirectory(weapon)
add_subdirectory(windows_stub)