add_executable(code_tests codetests.cpp stub.cpp)
add_subdirectory(modules)
target_link_libraries(code_tests PUBLIC core cfile cmdline log doctest)
option(FSO_INSTRUMENT_CODE "Use MSVC instrumentation to profile performance" OFF)
if (FSO_INSTRUMENT_CODE)
target_link_options(code_tests PUBLIC "/PROFILE")
endif()